Fix: Edit Icon Alignment

--- a/src/client/assets/styles/_settings.scss
+++ b/src/client/assets/styles/_settings.scss
@@ -53,6 +53,6 @@
 
 	.edit-icon {
 		text-align: right;
-		margin-right: 30px;
+		padding-right: 30px;
 	}
 }
